[package]
name = "slog-html"
version = "0.1.3"
authors = ["Daniel Faust <hessijames@gmail.com>"]
description = "Html formatter for slog-rs"
keywords = ["slog", "logging", "log", "html"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-html"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/html"
readme = "README.md"

[badges]
travis-ci = { repository = "slog-rs/html" }
appveyor = { repository = "slog-rs/html" }

[dependencies]
slog = { version = "1.4", features = ["max_level_trace", "release_max_level_trace"] }
slog-stream = "1.2"
chrono = "0.2"
